finalized stats collection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "**/blocks": true,
         "**/contracts": true,
         "**/transactions": true,
-	    "**/accounts": true
+	    "**/accounts": true,
+        "**/urls": true
     }
 }
