--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ orjson = "^3.6.6"
 PyYAML = "^6.0"
 aiolimiter = "^1.0.0"
 web3 = "^5.29.2"
+h2 = "^4.1.0"
+httpx-socks = {extras = ["asyncio"], version = "^0.7.4"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
